# python-prometheus-grafana

./: README.md  docker-compose.yml
grafana/provisioning/dashboards/: python-app-dashboard.json
prometheus/: prometheus.yml
python_app/: pyproject.toml
python_app/python_app/: main.py
