[tool.poetry]
name = "python-app"
version = "0.1.0"
description = ""
authors = ["chris220688 <13407893+kolitiri@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "python_app"}]

[tool.poetry.dependencies]
python = "^3.10"
prometheus-client = "^0.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
